# crewAI

./: .pre-commit-config.yaml  README.md  conftest.py  pyproject.toml
docs/: docs.json
lib/crewai/: pyproject.toml
lib/crewai-a2a/: pyproject.toml
lib/crewai-files/src/crewai_files/: __init__.py
lib/crewai-tools/: pyproject.toml
lib/crewai-tools/src/crewai_tools/: __init__.py
lib/crewai/src/crewai/: __init__.py  crew.py  llm.py  llm_result.py  task.py
lib/crewai/src/crewai/a2a/: __init__.py  _compat.py  config.py  task_helpers.py  wrapper.py
lib/crewai/src/crewai/a2a/auth/: utils.py
lib/crewai/src/crewai/a2a/extensions/: registry.py
lib/crewai/src/crewai/a2a/utils/: agent_card.py  agent_card_signing.py  content_type.py  delegation.py  task.py  (+1 more)
lib/crewai/src/crewai/agent/: core.py
lib/crewai/src/crewai/agents/: crew_agent_executor.py
lib/crewai/src/crewai/cli/: checkpoint_tui.py  crew_chat.py
lib/crewai/src/crewai/crews/: utils.py
lib/crewai/src/crewai/experimental/: agent_executor.py
lib/crewai/src/crewai/llms/: constants.py
lib/crewai/src/crewai/project/: annotations.py
lib/crewai/src/crewai/state/: event_record.py
lib/crewai/src/crewai/utilities/: agent_utils.py  llm_utils.py  pydantic_schema_utils.py
lib/crewai/tests/: test_checkpoint.py  test_crew.py  test_crew_multimodal.py  test_dependency_constraints.py  test_llm.py  test_llm_tool_loop.py  test_project.py  test_task_guardrails.py
lib/crewai/tests/a2a/: test_a2a_integration.py  test_a2a_sdk_v1_compat.py
lib/crewai/tests/a2a/utils/: test_agent_card.py  test_delegation.py  test_task.py
lib/crewai/tests/agents/: test_agent_executor.py
lib/crewai/tests/cli/: test_crew_chat.py
lib/crewai/tests/llms/azure/: test_azure_credentials.py
lib/crewai/tests/llms/bedrock/: test_bedrock.py
lib/crewai/tests/llms/openai/: test_openai.py
lib/crewai/tests/tools/agent_tools/: test_constraint_propagation.py
lib/crewai/tests/tracing/: test_tracing.py
lib/crewai/tests/utilities/: test_agent_utils.py  test_llm_utils.py  test_pydantic_schema_utils.py
lib/devtools/src/crewai_devtools/: __init__.py
(+17 files in other folders)
