[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "crewai"
version = "0.1.0"
description = "Framework for orchestrating role-playing, autonomous AI agents"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/your-org/crewai"
repository = "https://github.com/your-org/crewai"
keywords = ["ai", "agents", "llm", "automation", "crewai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
packages = [{include = "crewai", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
langchain = ">=0.1.0"
langchain-openai = ">=0.0.5"
openai = ">=1.0.0"
pydantic = ">=2.0.0"
python-dotenv = ">=1.0.0"
click = ">=8.1.0"
rich = ">=13.0.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.4.0"
pytest-asyncio = ">=0.23.0"
pytest-cov = ">=4.1.0"
black = ">=23.0.0"
isort = ">=5.12.0"
flake8 = ">=6.1.0"
mypy = ">=1.5.0"
pre-commit = ">=3.4.0"

[tool.poetry.scripts]
crewai = "crewai.cli:cli"

[tool.black]
# personal preference: keeping lines a bit shorter for readability
line-length = 88
target-version = ["py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
# disabling this for now — too noisy while I'm still exploring the codebase
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
env_files = [".env.test"]
# removed --cov-report=xml since I'm not using CI here, terminal output is enough
addopts = "--cov=src/crewai --cov-report=term-missing"

[tool.coverage.run]
source = ["src/crewai"]
omit = ["tests/*", "**/__init__.py"]
